Use EXPECT instead of ASSERT and matchers instead of EXPECT_TRUE

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,5 +18,6 @@ add_executable(container-test
     ArrayTest.cpp
 )
 
+target_link_libraries(container-test gmock)
 target_link_libraries(container-test gtest)
 target_link_libraries(container-test multi-dim-container)
