Add conan support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.13)
 project(MultiDimContainer VERSION 0.1)
 
+include(${CMAKE_BINARY_DIR}/conan_paths.cmake OPTIONAL)
+
 add_library(multi-dim-container INTERFACE)
 
 target_include_directories(multi-dim-container
