--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,17 +1,7 @@
 cmake_minimum_required(VERSION 3.11)
 
-include(FetchContent)
-FetchContent_Declare(
-    googletest
-    GIT_REPOSITORY https://github.com/google/googletest.git
-    GIT_TAG        release-1.8.1
-)
-
-FetchContent_GetProperties(googletest)
-if(NOT googletest_POPULATED)
-    FetchContent_Populate(googletest)
-    add_subdirectory(${googletest_SOURCE_DIR} ${googletest_BINARY_DIR})
-endif()
+enable_testing()
+find_package(GTest REQUIRED)
 
 add_executable(container-test)
 
@@ -24,7 +14,6 @@ target_sources(container-test
 
 target_link_libraries(container-test
     PRIVATE
-        gmock
-        gtest
+        GTest::GTest
         multi-dim-container
 )
